--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vuepress": "^1.3.1"
   },
   "resolutions": {
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.2",
     "serialize-javascript": "^2.1.1"
   }
 }
