--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
 language: node_js
 node_js:
   - v12.10.0
+branches:
+  only:
+    - master
 install:
-  - yarn install # npm ci
+  - yarn install
 script:
-  - yarn build # npm run docs:build
+  - yarn build
 deploy:
   provider: pages
   skip_cleanup: true
   local_dir: dist
-  github_token: ${travis_token} # 在 GitHub 中生成，用于允许 Travis 向你的仓库推送代码。在 Travis 的项目设置页面进行配置，设置为 secure variable
+  github_token: ${travis_token}
   repo: JINJITING/FEN
   keep_history: true
+  committer_from_gh: true
   on:
     branch: master
