--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "notes",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "person notes",
   "main": "index.js",
-  "repository": "https://github.com/JINJITING/FEN.git",
+  "repository": "https://github.com/JINJITING/front-end-road.git",
   "author": "JINJITING",
   "license": "MIT",
   "private": true,
