--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - master
 install:
-  - yarn install
+  - yarn
 script:
   - yarn build
 deploy:
@@ -13,7 +13,7 @@ deploy:
   skip_cleanup: true
   local_dir: dist
   github_token: ${travis_token}
-  repo: JINJITING/front-end-road
+  repo: JINJITING/fe-notes
   keep_history: false
   committer_from_gh: true
   on:
